--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
 }
 
 .banner {
-    position: absolute;
     background-image: linear-gradient(90deg, #1A1A1A -0.7%, rgba(26, 26, 26, 0) 100%), url(images/header_bg.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -13,6 +12,7 @@ body {
     height: 610px;
     top: 0;
     left: 0;
+    margin-bottom: 100px;
 }
 
 .main {
@@ -51,4 +51,119 @@ body {
     font-size: 20px;
     font-weight: 700;
     text-transform: capitalize;
+}
+
+.flex {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 100px;
+}
+
+
+.half-width {
+    width: 40%;
+    padding-left: 7%;
+}
+
+.half-width img {
+    width: 90%;
+    border-radius: 2%;
+    height: 450px;
+}
+
+
+h1 {
+    font-size: 45px;
+    font-weight: bold;
+    color: black;
+}
+
+p {
+    font-size: 16px;
+    color: gray;
+    line-height: 30px;
+}
+
+
+.donation-area {
+    justify-content: center;
+    text-align: center;
+}
+
+.donation-icon-area {
+    display: flex;
+    justify-content: center;
+}
+
+.donation-icon {
+    width: 30%;
+    padding: 45px 50px;
+    border-radius: 3%;
+    margin: 1% 1%;
+    background: #FEF4F5;
+}
+
+.donate-section {
+    margin-bottom: 100px;
+}
+
+.sun {
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+
+.sun img {
+    display: inline-block;
+    padding: 7px;
+    border-radius: 4%;
+}
+
+.charity-area {
+    justify-content: center;
+    text-align: center;
+}
+
+.flex1 {
+    display: flex;
+    margin: 4rem;
+    gap: 2rem;
+    justify-content: space-evenly;
+}
+
+.sun1 {
+    box-shadow: 1px 1px 15px grey;
+    border-radius: 20px;
+    padding: 1.5rem;
+}
+
+
+.sun1 img {
+    width: 100%;
+    height: 200px;
+    margin-bottom: 5px;
+}
+
+.sun1 a {
+    color: tomato;
+    font-weight: 900;
+    font-size: 20px;
+}
+
+footer {
+    background: #0B0D17;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 7rem;
+}
+
+footer h4 {
+    color: #EF233C;
+    font-size: 25px;
+    font-family: 'Splash', cursive;
+}
+
+footer p {
+    color: white;
 }
